# nbtdoc-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE-APACHE  README.md
docs/: format.md  json_format.d.ts  validation.md
src/: identifier.rs  lib.rs
src/parse/: ast.rs  mod.rs  parser.rs
src/validation/: arena.rs  error.rs  file_provider.rs  format.rs  mod.rs  root.rs
tests/: full_file.nbtdoc  small_file_root.nbtdoc  small_file_sibling.nbtdoc
