[package]
name = "nbtdoc"
version = "0.1.0"
authors = ["Yurihaia <17830663+Yurihaia@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

license = "MIT OR Apache-2.0"

[dependencies]
nom = "5.0.1"
serde = { version = "1.0.102", optional = true, features = [ "derive" ] }